# libxmp

./: CMakeLists.txt  Makefile.in  Makefile.lite  build_examples.cmake  build_pros.cmake  build_src.cmake
.github/workflows/: regression.yaml
include/: xmp.h
lite/: CMakeLists.txt  Makefile.in.in
lite/test/: CMakeLists.txt
src/: common.h  filter.c
src/loaders/: it_load.c
test/: CMakeLists.txt  test.c
test-dev/: CMakeLists.txt  Makefile.in  Makefile.vc  Makefile.vc.in  libxmp_fuzz.sh  main.c  test.h
vc/: Makefile  libxmp.vcproj  libxmp.vcproj.in
